Fixed GraphStats component's issue with scrollbars

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -90,3 +90,7 @@
 .buildsPage {
     margin: 1em;
 }
+
+.charts-container {
+    overflow: hidden;
+}
